--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wordforge",
+  "name": "collabdoc",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.3.0",
+    "@clerk/themes": "^2.1.19",
     "@lexical/react": "^0.16.1",
     "@liveblocks/client": "^2.3.0",
     "@liveblocks/node": "^2.3.0",
