--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
     "@clerk/nextjs": "^5.3.0",
     "@clerk/themes": "^2.1.19",
     "@lexical/react": "^0.16.1",
-    "@liveblocks/client": "^2.3.0",
+    "@liveblocks/client": "^2.4.0",
     "@liveblocks/node": "^2.3.0",
-    "@liveblocks/react": "^2.3.0",
-    "@liveblocks/react-lexical": "^2.3.0",
-    "@liveblocks/react-ui": "^2.3.0",
+    "@liveblocks/react": "^2.4.0",
+    "@liveblocks/react-lexical": "^2.4.0",
+    "@liveblocks/react-ui": "^2.4.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "jsm-editor": "^0.0.12",
     "lucide-react": "^0.424.0",
+    "nanoid": "^5.0.7",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
